Improve dt gar1 enet settings
- Improve enet pad settings
- enable both enet reference clocks to get it work at Linux startup. On
the board there are to dp83848 phys. This two phys are connected to
one mdio bus. Through this reason we need to enable both reference
clocks to communicate with the phys.

--- a/arch/arm/boot/dts/gar1.dts
+++ b/arch/arm/boot/dts/gar1.dts
@@ -106,6 +106,10 @@
 	};
 };
 
+&clks {
+	startup_clocks = <IMX6UL_CLK_ENET_REF>, <IMX6UL_CLK_ENET2_REF>;
+};
+
 /* RAM size for Continues Memory Allocator */
 &cma {
 	size = <CONFIG_GAR1_CMA_SIZE>;
@@ -298,14 +302,14 @@
 		pinctrl_enet1: enet1grp {
 			fsl,pins = <
 				/* FEC1 */
-				MX6UL_PAD_ENET1_RX_EN__ENET1_RX_EN	0x1b0b0
-				MX6UL_PAD_ENET1_RX_ER__ENET1_RX_ER	0x1b0b0
-				MX6UL_PAD_ENET1_RX_DATA0__ENET1_RDATA00	0x1b0b0
-				MX6UL_PAD_ENET1_RX_DATA1__ENET1_RDATA01	0x1b0b0
-				MX6UL_PAD_ENET1_TX_EN__ENET1_TX_EN	0x1b0b0
-				MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00	0x1b0b0
-				MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01	0x1b0b0
-				MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x4001b0b0
+				MX6UL_PAD_ENET1_RX_EN__ENET1_RX_EN	0x0b0e9
+				MX6UL_PAD_ENET1_RX_ER__ENET1_RX_ER	0x0b0e9
+				MX6UL_PAD_ENET1_RX_DATA0__ENET1_RDATA00	0x030e9
+				MX6UL_PAD_ENET1_RX_DATA1__ENET1_RDATA01	0x030e9
+				MX6UL_PAD_ENET1_TX_EN__ENET1_TX_EN	0x0b0e9
+				MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00	0x0b0e9
+				MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01	0x0b0e9
+				MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x4001b008
 				/* Phy reset IO pin */
 				MX6UL_PAD_CSI_MCLK__GPIO4_IO17		0x0b0b0
 			>;
@@ -319,14 +323,14 @@
 				MX6UL_PAD_GPIO1_IO07__ENET2_MDC		0x1b0b0
 				MX6UL_PAD_GPIO1_IO06__ENET2_MDIO	0x1b829
 				/* FEC2 */
-				MX6UL_PAD_ENET2_RX_EN__ENET2_RX_EN	0x1b0b0
-				MX6UL_PAD_ENET2_RX_ER__ENET2_RX_ER	0x1b0b0
-				MX6UL_PAD_ENET2_RX_DATA0__ENET2_RDATA00	0x1b0b0
-				MX6UL_PAD_ENET2_RX_DATA1__ENET2_RDATA01	0x1b0b0
-				MX6UL_PAD_ENET2_TX_EN__ENET2_TX_EN	0x1b0b0
-				MX6UL_PAD_ENET2_TX_DATA0__ENET2_TDATA00	0x1b0b0
-				MX6UL_PAD_ENET2_TX_DATA1__ENET2_TDATA01	0x1b0b0
-				MX6UL_PAD_ENET2_TX_CLK__ENET2_REF_CLK2	0x4001b0b0
+				MX6UL_PAD_ENET2_RX_EN__ENET2_RX_EN	0x0b0e9
+				MX6UL_PAD_ENET2_RX_ER__ENET2_RX_ER	0x0b0e9
+				MX6UL_PAD_ENET2_RX_DATA0__ENET2_RDATA00	0x030e9
+				MX6UL_PAD_ENET2_RX_DATA1__ENET2_RDATA01	0x030e9
+				MX6UL_PAD_ENET2_TX_EN__ENET2_TX_EN	0x0b0e9
+				MX6UL_PAD_ENET2_TX_DATA0__ENET2_TDATA00	0x0b0e9
+				MX6UL_PAD_ENET2_TX_DATA1__ENET2_TDATA01	0x0b0e9
+				MX6UL_PAD_ENET2_TX_CLK__ENET2_REF_CLK2	0x4001b008
 				/* Phy reset IO pin */
 				MX6UL_PAD_CSI_PIXCLK__GPIO4_IO18	0x0b0b0
 			>;
