--- a/arch/arm/boot/dts/netdcua9qdl.dtsi
+++ b/arch/arm/boot/dts/netdcua9qdl.dtsi
@@ -948,7 +948,7 @@
 				/* DVS */
 				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x0
 				/* LCD DEN */
-				MX6QDL_PAD_CSI0_DATA_EN__GPIO5_IO20	0x80000000
+				MX6QDL_PAD_CSI0_DATA_EN__GPIO5_IO20	0x1b0b0
 				/* IRQ1 for SX8654 and WM9715 (ADC) */
 				MX6QDL_PAD_EIM_DA5__GPIO3_IO05		0x30b0
 				/* IRQ2 for ADS1015 and WM9715 (GENIRQ) */
@@ -1033,19 +1033,19 @@
 #ifdef CONFIG_NETDCUA9_PARALLEL_CAMERA
 		pinctrl_ipu1_2: ipu1grp-cam { /* parallel camera */
 			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT12__IPU1_CSI0_DATA12	0x80000000
-				MX6QDL_PAD_CSI0_DAT13__IPU1_CSI0_DATA13	0x80000000
-				MX6QDL_PAD_CSI0_DAT14__IPU1_CSI0_DATA14	0x80000000
-				MX6QDL_PAD_CSI0_DAT15__IPU1_CSI0_DATA15	0x80000000
-				MX6QDL_PAD_CSI0_DAT16__IPU1_CSI0_DATA16	0x80000000
-				MX6QDL_PAD_CSI0_DAT17__IPU1_CSI0_DATA17	0x80000000
-				MX6QDL_PAD_CSI0_DAT18__IPU1_CSI0_DATA18	0x80000000
+				MX6QDL_PAD_CSI0_DAT12__IPU1_CSI0_DATA12	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT13__IPU1_CSI0_DATA13	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT14__IPU1_CSI0_DATA14	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT15__IPU1_CSI0_DATA15	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT16__IPU1_CSI0_DATA16	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT17__IPU1_CSI0_DATA17	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT18__IPU1_CSI0_DATA18	0x1b0b0
 #if !defined(CONFIG_NETDCUA9_UART_D_RS485)
-				MX6QDL_PAD_CSI0_DAT19__IPU1_CSI0_DATA19	0x80000000
+				MX6QDL_PAD_CSI0_DAT19__IPU1_CSI0_DATA19	0x1b0b0
 #endif
-				MX6QDL_PAD_CSI0_PIXCLK__IPU1_CSI0_PIXCLK 0x80000000
-				MX6QDL_PAD_CSI0_MCLK__IPU1_CSI0_HSYNC	0x80000000
-				MX6QDL_PAD_CSI0_VSYNC__IPU1_CSI0_VSYNC	0x80000000
+				MX6QDL_PAD_CSI0_PIXCLK__IPU1_CSI0_PIXCLK 0x1b0b0
+				MX6QDL_PAD_CSI0_MCLK__IPU1_CSI0_HSYNC	0x1b0b0
+				MX6QDL_PAD_CSI0_VSYNC__IPU1_CSI0_VSYNC	0x1b0b0
 			>;
 		};
 #endif /* CONFIG_NETDCUA9_PARALLEL_CAMERA */
@@ -1121,7 +1121,7 @@
 		pinctrl_ecspi1_cs: ecspi1cs {
 			fsl,pins = <
 				/* ECSPI1_SS0 */
-				MX6QDL_PAD_CSI0_DAT7__ECSPI1_SS0	0x80000000
+				MX6QDL_PAD_CSI0_DAT7__ECSPI1_SS0	0x1b0b0
 			>;
 		};
 #endif /* CONFIG_NETDCUA9_SPI_A */
@@ -1167,15 +1167,15 @@
 		/* CAN1 */
 		pinctrl_flexcan1: flexcan1grp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_ROW2__FLEXCAN1_RX	0x80000000
-				MX6QDL_PAD_KEY_COL2__FLEXCAN1_TX	0x80000000
+				MX6QDL_PAD_KEY_ROW2__FLEXCAN1_RX	0x1b020
+				MX6QDL_PAD_KEY_COL2__FLEXCAN1_TX	0x1b020
 			>;
 		};
 		/* CAN2 */
 		pinctrl_flexcan2: flexcan2grp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_COL4__FLEXCAN2_TX	0x80000000
-				MX6QDL_PAD_KEY_ROW4__FLEXCAN2_RX	0x80000000
+				MX6QDL_PAD_KEY_COL4__FLEXCAN2_TX	0x1b020
+				MX6QDL_PAD_KEY_ROW4__FLEXCAN2_RX	0x1b020
 			>;
 		};
 
@@ -1198,8 +1198,8 @@
 				MX6QDL_PAD_ENET_RX_ER__ENET_RX_ER	0x1b0b0
 				MX6QDL_PAD_ENET_CRS_DV__ENET_RX_EN	0x1b0b0
 				MX6QDL_PAD_GPIO_16__ENET_REF_CLK	0x4001b0b0
-				/* Phy reset IO pin */
-				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x80000000
+				/* Phy reset IO pin, value from UBoot */
+				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x1b0b0
 			>;
 		};
 
@@ -1308,7 +1308,7 @@
 				MX6QDL_PAD_SD3_DAT6__SD3_DATA6		0x17071
 				MX6QDL_PAD_SD3_DAT7__SD3_DATA7		0x17071
 				/* Reset eMMC, active low */
-				MX6QDL_PAD_SD3_RST__SD3_RESET		0x1B071
+				MX6QDL_PAD_SD3_RST__SD3_RESET		0x1b071
 			>;
 		};
 #endif /* CONFIG_NETDCUA9_EMMC */
