--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -1215,11 +1215,11 @@
 				/* VBL_ON for backlight on */
 				MX6QDL_PAD_SD4_DAT0__GPIO2_IO08		0x13059
 
-				/* WDOG1 */
-				MX6QDL_PAD_GPIO_9__WDOG1_B		0x80000000
+				/* WDOG1, value from NBoot */
+				MX6QDL_PAD_GPIO_9__WDOG1_B		0x8
 
 				/* I2C2_IRQn (SX8655, ext. touch) */
-				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0x80000000
+				MX6QDL_PAD_ENET_TXD0__GPIO1_IO30	0xb0b0
 
 				/* camera powerdown - active high */
 				MX6QDL_PAD_CSI0_DAT6__GPIO5_IO24	0x17059
@@ -1227,8 +1227,8 @@
 				/* camera reset - active low */
 				MX6QDL_PAD_CSI0_DAT5__GPIO5_IO23	0x17059
 
-				/* USB_HUB_RESET, U-Boot set the pads */
-				MX6QDL_PAD_GPIO_17__GPIO7_IO12		0x80000000
+				/* USB_HUB_RESET, value from U-Boot */
+				MX6QDL_PAD_GPIO_17__GPIO7_IO12		0x1b0b0
 
 				/* RTC_IRQ */
 				MX6QDL_PAD_ENET_TX_EN__GPIO1_IO28	0xb0b0
@@ -1295,19 +1295,19 @@
 #ifdef CONFIG_ARMSTONEA9_PARALLEL_CAMERA
 		pinctrl_ipu1_2: ipu1grp-cam { /* parallel camera */
 			fsl,pins = <
-				MX6QDL_PAD_CSI0_DAT10__IPU1_CSI0_DATA10	0x80000000
-				MX6QDL_PAD_CSI0_DAT11__IPU1_CSI0_DATA11	0x80000000
-				MX6QDL_PAD_CSI0_DAT12__IPU1_CSI0_DATA12	0x80000000
-				MX6QDL_PAD_CSI0_DAT13__IPU1_CSI0_DATA13	0x80000000
-				MX6QDL_PAD_CSI0_DAT14__IPU1_CSI0_DATA14	0x80000000
-				MX6QDL_PAD_CSI0_DAT15__IPU1_CSI0_DATA15	0x80000000
-				MX6QDL_PAD_CSI0_DAT16__IPU1_CSI0_DATA16	0x80000000
-				MX6QDL_PAD_CSI0_DAT17__IPU1_CSI0_DATA17	0x80000000
-				MX6QDL_PAD_CSI0_DAT18__IPU1_CSI0_DATA18	0x80000000
-				MX6QDL_PAD_CSI0_DAT19__IPU1_CSI0_DATA19	0x80000000
-				MX6QDL_PAD_CSI0_PIXCLK__IPU1_CSI0_PIXCLK 0x80000000
-				MX6QDL_PAD_CSI0_MCLK__IPU1_CSI0_HSYNC	0x80000000
-				MX6QDL_PAD_CSI0_VSYNC__IPU1_CSI0_VSYNC	0x80000000
+				MX6QDL_PAD_CSI0_DAT10__IPU1_CSI0_DATA10	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT11__IPU1_CSI0_DATA11	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT12__IPU1_CSI0_DATA12	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT13__IPU1_CSI0_DATA13	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT14__IPU1_CSI0_DATA14	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT15__IPU1_CSI0_DATA15	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT16__IPU1_CSI0_DATA16	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT17__IPU1_CSI0_DATA17	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT18__IPU1_CSI0_DATA18	0x1b0b0
+				MX6QDL_PAD_CSI0_DAT19__IPU1_CSI0_DATA19	0x1b0b0
+				MX6QDL_PAD_CSI0_PIXCLK__IPU1_CSI0_PIXCLK 0x1b0b0
+				MX6QDL_PAD_CSI0_MCLK__IPU1_CSI0_HSYNC	0x1b0b0
+				MX6QDL_PAD_CSI0_VSYNC__IPU1_CSI0_VSYNC	0x1b0b0
 			>;
 		};
 #endif /* CONFIG_ARMSTONEA9_PARALLEL_CAMERA */
@@ -1515,8 +1515,8 @@
 
 		pinctrl_status_leds: ledgrp {
 			fsl,pins = <
-				MX6QDL_PAD_KEY_COL0__GPIO4_IO06		0x80000000
-				MX6QDL_PAD_KEY_ROW0__GPIO4_IO07		0x80000000
+				MX6QDL_PAD_KEY_COL0__GPIO4_IO06		0x30b0
+				MX6QDL_PAD_KEY_ROW0__GPIO4_IO07		0x30b0
 			>;
 		};
 	};
